<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/e_nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nazwa"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/e_cena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/ilo"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_nazwa" />

    <EditText
        android:id="@+id/e_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/x"

        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_y" />

    <EditText
        android:id="@+id/e_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/y"

        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_cena" />

    <EditText
        android:id="@+id/e_ilosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/cena"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_x" />

    <Button
        android:id="@+id/b_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zamknij"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_add"
        app:layout_constraintTop_toBottomOf="@+id/e_ilosc" />

    <Button
        android:id="@+id/b_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="Dodaj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_ilosc" />

</androidx.constraintlayout.widget.ConstraintLayout>