<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/e2_nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nazwa"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/e2_cena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ilo"
        android:inputType="text"

        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2_nazwa" />

    <EditText
        android:id="@+id/e2_ilosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cena"

        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2_x" />

    <EditText
        android:id="@+id/e2_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/x"

        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2_y" />

    <EditText
        android:id="@+id/e2_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/y"

        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2_cena" />

    <Button
        android:id="@+id/b2_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zamknij"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b2_save"
        app:layout_constraintTop_toBottomOf="@+id/e2_ilosc" />

    <Button
        android:id="@+id/b2_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="Zapisz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2_ilosc" />

</androidx.constraintlayout.widget.ConstraintLayout>